# Darwin-WGA

./: LICENSE  README.md
scripts/: create_BSW.hw.sh  create_BSW.hw_emu.sh  create_GACTX.hw.sh  create_GACTX.hw_emu.sh  create_WGA.hw.sh  create_WGA.hw_emu.sh  create_xo.sh  gen_xo.tcl  package_kernel.tcl
src/hdl/BSW/: BSW_AXISlave.v  BSW_Array.v  BSW_ArrayTop.v  BSW_Kernel.sv  BSW_KernelControl.sv  BSW_PE.v
src/hdl/BSW/top_modules/: BSW_bank0.v  BSW_bank0.xml
src/hdl/GACTX/: GACTX_AXISlave.v  GACTX_Array.v  GACTX_ArrayTop.v  GACTX_ArrayWrapper.v  GACTX_BTLogic.v  GACTX_Kernel.sv  GACTX_KernelControl.sv  GACTX_NWPE.v
src/hdl/GACTX/top_modules/: GACTX_bank3.v  GACTX_bank3.xml
src/hdl/common/: BRAM.v  DP_BRAM.v  FIFO.v  Nt2Param.v  axi_read_master.sv  axi_write_master.sv  counter.sv
src/host/BSW/: CMakeLists.txt  main.cpp  parameters.txt  params.cfg  query.txt  ref.txt  results.txt
src/host/GACTX/: CMakeLists.txt  main.cpp  parameters.txt  params.cfg  query.txt  ref.txt
src/host/WGA/: CMakeLists.txt  Processor.cpp  Processor.h  filter.cpp  graph.h  maf_printer.cpp  main.cpp  ntcoding.cpp  params.cfg  seed_pos_table.cpp  seeder.cpp
